# description_user_bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  descriptions.json  state.json
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/commands/: handler.rs  mod.rs  types.rs
src/config/: descriptions.rs  mod.rs  settings.rs
src/scheduler/: mod.rs  runner.rs  state.rs
src/telegram/: client.rs  mod.rs  rate_limiter.rs
src/validator/: main.rs
